--- a/BarcodeScanner/Modules/Error/View/ErrorViewController.xib
+++ b/BarcodeScanner/Modules/Error/View/ErrorViewController.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,27 +16,33 @@
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ErrorViewController" customModule="BarcodeScanner" customModuleProvider="target">
+            <connections>
+                <outlet property="imageView" destination="uAk-5n-Mmf" id="k6K-q4-jSL"/>
+                <outlet property="messageLabel" destination="LkP-94-Xda" id="1eO-Sj-GFx"/>
+                <outlet property="titleLabel" destination="iLC-9m-pXt" id="iI7-DI-MoK"/>
+                <outlet property="view" destination="iN0-l3-epB" id="4XX-Ei-6kS"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ErrorPopup" customModule="BarcodeScanner" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="268"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Uc-Lo-vwH">
+                <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Uc-Lo-vwH">
                     <rect key="frame" x="334.5" y="15" width="25.5" height="24.5"/>
                     <state key="normal" image="xmark.circle.fill" catalog="system">
                         <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large" weight="semibold"/>
                     </state>
                     <connections>
-                        <action selector="dismissPressed:" destination="-1" eventType="touchUpInside" id="HQt-5K-hD5"/>
-                        <action selector="dismissPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="PPm-k1-ueE"/>
+                        <action selector="dismissPressed:" destination="-1" eventType="touchUpInside" id="Zo2-kM-mtE"/>
                     </connections>
                 </button>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="Vuf-tQ-Knr">
-                    <rect key="frame" x="32" y="60" width="311" height="180.5"/>
+                    <rect key="frame" x="32" y="55.5" width="311" height="180.5"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="barcode.viewfinder" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="uAk-5n-Mmf">
-                            <rect key="frame" x="115.5" y="5.5" width="80" height="73"/>
+                            <rect key="frame" x="113.5" y="3.5" width="84" height="77"/>
                             <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="70"/>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Уупс!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iLC-9m-pXt">
@@ -53,26 +60,22 @@
                     </subviews>
                 </stackView>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="Vuf-tQ-Knr" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="0Fw-9W-coC"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="Vuf-tQ-Knr" secondAttribute="bottom" constant="32" id="1TN-B0-JJr"/>
                 <constraint firstItem="Vuf-tQ-Knr" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="32" id="H5Z-RH-oRa"/>
                 <constraint firstItem="4Uc-Lo-vwH" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="15" id="Mpq-Ix-mZu"/>
-                <constraint firstItem="Vuf-tQ-Knr" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="OH9-HP-ctd"/>
+                <constraint firstAttribute="trailing" secondItem="Vuf-tQ-Knr" secondAttribute="trailing" constant="32" id="PWl-in-kON"/>
+                <constraint firstItem="Vuf-tQ-Knr" firstAttribute="top" secondItem="4Uc-Lo-vwH" secondAttribute="bottom" constant="16" id="dMe-ip-WH3"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="4Uc-Lo-vwH" secondAttribute="trailing" constant="15" id="yvc-We-dj1"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <connections>
-                <outlet property="descriptionLabel" destination="LkP-94-Xda" id="Ago-U6-lyV"/>
-                <outlet property="imageView" destination="uAk-5n-Mmf" id="D0u-9C-bhT"/>
-                <outlet property="titleLabel" destination="iLC-9m-pXt" id="Rd8-iQ-fUN"/>
-            </connections>
-            <point key="canvasLocation" x="138.40000000000001" y="-24.7376311844078"/>
+            <point key="canvasLocation" x="138.40000000000001" y="-39.580209895052477"/>
         </view>
     </objects>
     <resources>
-        <image name="barcode.viewfinder" catalog="system" width="128" height="114"/>
+        <image name="barcode.viewfinder" catalog="system" width="128" height="115"/>
         <image name="xmark.circle.fill" catalog="system" width="128" height="121"/>
     </resources>
 </document>
